objects/DMAPP__AM_Solution__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Solution_Family__c</fullName>
        <label>Solution Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Products</fullName>
                    <default>true</default>
                    <label>Products</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Solution_Long_Name__c</fullName>
        <label>Solution Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <description>SortOrder</description>
        <inlineHelpText>SortOrder</inlineHelpText>
        <label>Market View SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tooltip__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>AM Solution</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__All_Account_Management_Solutions</fullName>
        <columns>DMAPP__Solution_Family__c</columns>
        <columns>NAME</columns>
        <columns>DMAPP__Solution_Long_Name__c</columns>
        <columns>DMAPP__Active__c</columns>
        <columns>DMAPP__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DMAPP__All_Solutions</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Solutions</label>
    </listViews>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>